--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,7 +2,7 @@
   sqlserver:
     environment:
       - ACCEPT_EULA=Y
-      - MSSQL_SA_PASSWORD=Password12*
+      - MSSQL_SA_PASSWORD=Abc1234.
     ports:
       - "1433:1433"
     volumes:
