--- a/src/mainPackages/diDENGE.WebAPI/appsettings.Production.json
+++ b/src/mainPackages/diDENGE.WebAPI/appsettings.Production.json
@@ -12,7 +12,7 @@
     "SecurityKey": "959182b2-2b05-4193-99f2-35e6b6173fdb71ccace0-dd1f-4547-8578-424f2f1ca995"
   },
   "ConnectionStrings": {
-    "MSSQLConnectionString" : "Server=sqlserver,1433;Database=diDENGEDb;User=sa;Password=Password12*;TrustServerCertificate=True"
+    "MSSQLConnectionString" : "Server=sqlserver,1433;Database=diDENGEDb;User=sa;Password=Abc1234.;TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
