--- a/src/mainPackages/diDENGE.WebAPI/appsettings.Production.json
+++ b/src/mainPackages/diDENGE.WebAPI/appsettings.Production.json
@@ -14,5 +14,10 @@
   "ConnectionStrings": {
     "MSSQLConnectionString" : "Server=sqlserver,1433;Database=diDENGEDb;User=sa;Password=Abc1234.;TrustServerCertificate=True"
   },
+  "Cloudinary": {
+    "CloudName": "${CLOUDINARY_CLOUD_NAME}",
+    "APIKey": "${CLOUDINARY_API_KEY}",
+    "APISecret": "${CLOUDINARY_API_SECRET}"
+  },
   "AllowedHosts": "*"
 }
