--- a/src/mainPackages/diDENGE.WebAPI/diDENGE.WebAPI.csproj
+++ b/src/mainPackages/diDENGE.WebAPI/diDENGE.WebAPI.csproj
@@ -1,13 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <UserSecretsId>5aa74063-367d-4380-b78d-b308104b5d70</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
       <PrivateAssets>all</PrivateAssets>
@@ -17,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\diDENGE.Infrastructure\diDENGE.Infrastructure.csproj" />
     <ProjectReference Include="..\diDENGE.Presentation\diDENGE.Presentation.csproj" />
   </ItemGroup>
 
