--- a/src/mainPackages/diDENGE.Application/diDENGE.Application.csproj
+++ b/src/mainPackages/diDENGE.Application/diDENGE.Application.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <Folder Include="Features\Auths\" />
+    <Folder Include="Features\Procedures\Rules\" />
     <Folder Include="Features\Users\Profiles\" />
   </ItemGroup>
 
