--- a/src/mainPackages/diDENGE.Application/diDENGE.Application.csproj
+++ b/src/mainPackages/diDENGE.Application/diDENGE.Application.csproj
@@ -22,7 +22,9 @@
 
   <ItemGroup>
     <Folder Include="Features\Auths\" />
-    <Folder Include="Features\Procedures\Rules\" />
+    <Folder Include="Features\SocialMediaApplicationUsages\Models\" />
+    <Folder Include="Features\SocialMediaApplicationUsages\Profiles\" />
+    <Folder Include="Features\SocialMediaApplicationUsages\Queries\" />
     <Folder Include="Features\Users\Profiles\" />
   </ItemGroup>
 
