Configured production environment as Azure deployment and added new environment for Docker deployment called 'Docker'

--- a/src/mainPackages/diDENGE.WebAPI/appsettings.Production.json
+++ b/src/mainPackages/diDENGE.WebAPI/appsettings.Production.json
@@ -8,16 +8,7 @@
   "JwtOptions": {
     "Issuer": "diDENGE",
     "Audience": "diDENGE",
-    "RefreshTokenExpiration": 15,
-    "SecurityKey": "959182b2-2b05-4193-99f2-35e6b6173fdb71ccace0-dd1f-4547-8578-424f2f1ca995"
-  },
-  "ConnectionStrings": {
-    "MSSQLConnectionString" : "Server=sqlserver,1433;Database=diDENGEDb;User=sa;Password=Abc1234.;TrustServerCertificate=True"
-  },
-  "Cloudinary": {
-    "CloudName": "${CLOUDINARY_CLOUD_NAME}",
-    "APIKey": "${CLOUDINARY_API_KEY}",
-    "APISecret": "${CLOUDINARY_API_SECRET}"
+    "RefreshTokenExpiration": 15
   },
   "AllowedHosts": "*"
 }
