--- a/src/mainPackages/diDENGE.WebAPI/appsettings.json
+++ b/src/mainPackages/diDENGE.WebAPI/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "KeyVault": {
+    "KeyVaultURL" : "https://didenge-key-vault.vault.azure.net/"
   }
 }
