Added twilio verify message and send grid mail service. Added unit of work for dealing with transaction operations

--- a/src/mainPackages/diDENGE.WebAPI/appsettings.Development.json
+++ b/src/mainPackages/diDENGE.WebAPI/appsettings.Development.json
@@ -19,5 +19,14 @@
     "APIKey": "",
     "APISecret": ""
   },
+  "SendGrid": {
+    "APIKey" : "",
+    "MailAccount": ""
+  },
+  "Twilio": {
+    "AccountSID": "",
+    "AuthToken": "",
+    "VerifyServiceSID": ""
+  },
   "AllowedHosts": "*"
 }
