--- a/src/mainPackages/diDENGE.WebAPI/appsettings.Docker.json
+++ b/src/mainPackages/diDENGE.WebAPI/appsettings.Docker.json
@@ -19,5 +19,14 @@
     "APIKey": "${CloudinaryApiKey}",
     "APISecret": "${CloudinaryApiSecret}"
   },
+  "SendGrid": {
+    "APIKey" : "${SendGridApiKey}",
+    "MailAccount": "${SendGridMailAccount}"
+  },
+  "Twilio": {
+    "AccountSID": "${TwilioAccountSID}",
+    "AuthToken": "${TwilioAuthToken}",
+    "VerifyServiceSID": "${TwilioVerifyServiceSID}"
+  },
   "AllowedHosts": "*"
 }
