--- a/src/mainPackages/diDENGE.Infrastructure/diDENGE.Infrastructure.csproj
+++ b/src/mainPackages/diDENGE.Infrastructure/diDENGE.Infrastructure.csproj
@@ -21,6 +21,8 @@
   <ItemGroup>
     <PackageReference Include="CloudinaryDotNet" Version="1.26.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.0" />
+    <PackageReference Include="SendGrid" Version="9.29.3" />
+    <PackageReference Include="Twilio" Version="7.1.0" />
   </ItemGroup>
 
   <ItemGroup>
